--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           dotnet-version: 9.0.x
 
       - name: Restore dependencies
-        uses: dotnet restore
+        run: dotnet restore
 
       - name: Build
         run: dotnet build --no-restore
